# hanover

./: README.md  ai_client.py  conversation.py  core.py  main.py  pyproject.toml  semantic_search.py  text_processing.py  web_search.py
example_conversations/: iphone4.txt
