[project]
name = "hanover"
version = "0.1.0"
description = "Interactive AI-powered Q&A CLI with web context and follow-up conversations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "serpapi>=0.1.5",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "google-search-results>=2.4.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
hanover = "main:main"
